<resources>
    <string name="app_name">TP1</string>
    <string name="Valider">Valider</string>
    <string name="nom">Nom</string>
    <string name="saisir_votre_nom">Saisir votre Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="saisir_votre_pr_nom">Saisir votre Prénom</string>
    <string name="age">Age</string>
    <string name="saisir_votre_age">Saisir votre Age</string>
    <string name="comp_tence">Compétence</string>
    <string name="saisir_votre_comp_tence">Saisir votre Compétence</string>
    <string name="n_tel">N°.Tel</string>
    <string name="saisir_votre_num_ro">Saisir votre Numéro</string>
    <string name="formulaire_valide">Formulaire validé !</string>
    <string name="changeractivit">ChangerActivité</string>
    <string name="retour">Retour</string>
    <string name="ok">Ok</string>
    <string name="Recommencer">Recommencer</string>
    <string name="une_erreur">Une erreur ?</string>
    <string name="appelez_ce_num_ro">Appelez ce numéro !</string>
    <string name="calendrier">calendrier</string>
    <string name="trains">trains</string>
    <string name="accueil">accueil</string>
    <string name="envoie">envoyez</string>
    <string name="dest">destination</string>
    <string name="depart">depart</string>
    <string name="Evenement">Evenement</string>
    <string name="versexo6">VersExo6</string>
</resources>